@@ -1,7 +1,7 @@
 /*
 Theme Name: DarkElements
 Theme URI: http://www.guidovanderleest.nl/darkelements
-Version: 2.3
+Version: 2.4
 Author: Guido van der Leest
 Author URI: http://www.guidovanderleest.nl
 Description: DarkElements is a free, basic, clean, minimalistic, responsive, mobile friendly WordPress theme. Default theme language is English but Dutch, German, Spanish and French are supported too. Sidebar on left side, navigation on left side, 3 widget-area's in footer, custom header-image, custom background and display logo or blogname and description are included. Besides this no theme settingspage, no fancy options, no slideshow, this one only has the basic options. Enjoy. 
@@ -145,10 +145,10 @@ select {max-width:100%; -webkit-appearance:menulist; -moz-appearance:menulist;}
 /* HEADER MENU */
 .nav-head {background:none; clear:both; margin:0; padding:5px 0;}
 .nav-head select {display:none;}
-.nav-head ul {padding:0; margin:0;}
+.nav-head ul {padding:0; margin:0; z-index:999;}
 .nav-head ul li {list-style-type: none; position:relative; padding:0; margin:0;}
 .nav-head ul li a {text-decoration:none; padding:5px 0; display:inline-block; width:100%; border-bottom:1px solid #444;}
-.menu .current_page_item > a, .menu .current_page_parent > a {color:#e77776;}
+.nav-head .current_page_item > a, .nav-head .current_page_parent > a {color:#e77776;}
 
 
 /* HEADER SUBMENU */
